# kindkapibari

./: .gitignore  Cargo.toml  LICENSE_ART.md  README.md  rustfmt.toml
.run/: Clippy server_api.run.xml  Clippy server_auth.run.xml  build core.run.xml
affirmpak/: README.md
affirmpak/affirmpak_compiler/: Cargo.toml
affirmpak/affirmpak_compiler/src/: compiler.rs  config.rs  error.rs  lib.rs  main.rs
affirmpak/affirmpak_core/: Cargo.toml
affirmpak/affirmpak_registry/: Cargo.toml
affirmpak/affirmpak_registry/src/: config.rs
affirmpak/compiler/: Cargo.toml
backend/affirmpak_registry/: Cargo.toml
backend/capybafirmations_api/: Cargo.toml
backend/capybafirmations_server/: Cargo.toml
backend/capybafirmations_server/src/: config.rs  context.rs  main.rs
backend/capybafirmations_server/src/api/: login.rs  mod.rs  users.rs
capybafirmations/capybafirmations_server/: Cargo.toml
capybafirmations_commons/: Cargo.toml
capybafirmations_commons/src/: affirmpak.rs  languages.rs  lib.rs  preferences.rs  pronouns.rs  responses.rs  tags.rs  user.rs  version.rs
capybafirmations_commons/src/user/: connections.rs  metadata.rs  mod.rs  settings.rs  user.rs
capybafirmations_internals/: Cargo.toml
capybafirmations_internals/src/: capybara.rs  lib.rs
coconut/: README.md
coconut/coconut_core/: Cargo.toml
coconutpak/: README.md
coconutpak/coconutpak_compiler/: Cargo.toml
coconutpak/coconutpak_compiler/src/: compiler.rs  error.rs  lib.rs
coconutpak/coconutpak_island/: Cargo.toml
coconutpak/coconutpak_island/src/: coconutpak_compiler.rs  config.rs  error.rs  login.rs  main.rs  permissions.rs  report.rs  suspended.rs
coconutpak/coconutpak_island/src/access/: coconutpak.rs  login.rs  mod.rs  user.rs
coconutpak/coconutpak_island/src/api/: mod.rs
coconutpak/coconutpak_island/src/api/v1/: coconutpak.rs  login.rs  mod.rs  user.rs
coconutpak/coconutpak_island/src/schema/: api_key.rs  api_key_log.rs  bans.rs  coconutpak.rs  coconutpak_data.rs  coconutpak_history.rs  coconutpak_versions.rs  mod.rs  oauth_tokens.rs  reports.rs  session.rs  session_log.rs  subscribers.rs  user.rs
coconutpak/coconutpak_registry/: Cargo.toml
coconutpak/coconutpak_registry/src/: coconut_compiler.rs  coconutpak_compiler.rs  config.rs  main.rs
coconutpak/coconutpak_registry/src/schema/: api_key.rs  coconutpak.rs  coconutpak_history.rs  mod.rs  user.rs
coconutpak/cocopak/: Cargo.toml
coconutpak/cocopak/src/: main.rs  web.rs
coconutpak/cocopak/src/commands/: init.rs
kindkapibari/game/kindkapibari_client/: Cargo.toml
kindkapibari/game/kindkapibari_client/src/: action.rs  keys.rs  main.rs  network.rs  player.rs  player_input.rs
kindkapibari/game/kindkapibari_client/src/systems/: mod.rs  network.rs  player_input.rs
kindkapibari/game/kindkapibari_game_shared/: Cargo.toml
kindkapibari/game/kindkapibari_game_shared/src/: lib.rs
kindkapibari/game/kindkapibari_game_shared/src/components/: interactable.rs  mod.rs  network.rs  physics.rs  place.rs  speed.rs  sprite.rs  velocity.rs
kindkapibari/game/kindkapibari_game_shared/src/components/entities/: ai.rs  facing.rs  health.rs  mod.rs  name.rs  pet.rs  player.rs  state.rs
kindkapibari/game/kindkapibari_game_shared/src/protocol/: auth.rs  connection.rs  entity.rs  input.rs  map.rs  mod.rs  total.rs  transform.rs
kindkapibari/game/kindkapibari_game_shared/src/resources/: auth.rs  connection.rs
kindkapibari/kindkapibari_core/: Cargo.toml
kindkapibari/kindkapibari_core/src/: auth.rs  badges.rs  db_impl.rs  dbarray.rs  dbhasmap.rs  dbvec.rs  gender.rs  language.rs  lib.rs  license.rs  makeconfig_macros.rs  manifest.rs  mokacaches.rs  motd.rs  output.rs  preferences.rs  pronouns.rs  redis_impl.rs  reminder.rs  reseedingrng.rs  responses.rs  roles.rs  route.rs  scopes.rs  secret.rs  secret_gen.rs  snowflake.rs  sober.rs  state.rs  tags.rs  templater.rs  text.rs  throttle.rs  tracing_middleware.rs  user_data.rs  version.rs
kindkapibari/kindkapibari_core/src/map/: area.rs  island.rs  mod.rs  props.rs  size.rs
kindkapibari/kindkapibari_schema/: Cargo.toml
kindkapibari/kindkapibari_schema/src/: appdata_traits.rs  error.rs  lib.rs  redis.rs
kindkapibari/kindkapibari_schema/src/access/: application.rs  mod.rs  user.rs
kindkapibari/kindkapibari_schema/src/access/auth/: oauth.rs
kindkapibari/kindkapibari_schema/src/schema/: applications.rs  bans.rs
kindkapibari/kindkapibari_schema/src/schema/users/: badges.rs  connections.rs  login_tokens.rs  mod.rs  oauth_authorizations.rs  onetime_reminders.rs  passwords.rs  preferences.rs  recurring_reminders.rs  refresh_tokens.rs  sobers.rs  statistics.rs  user.rs  userdata.rs
kindkapibari/kindkapibari_server/: Cargo.toml
kindkapibari/kindkapibari_server/src/: badges.rs  config.rs  error.rs  main.rs  roles.rs  scopes.rs
kindkapibari/kindkapibari_server/src/access/: application.rs  login.rs  mod.rs  oauth.rs  user.rs
kindkapibari/kindkapibari_server/src/access/auth/: login.rs  mod.rs  oauth.rs  oauth_thirdparty.rs
kindkapibari/kindkapibari_server/src/login/: login.rs  mod.rs  oauth.rs  oauth_thirdparty.rs
kindkapibari/kindkapibari_server/src/schema/: application_secrets.rs  applications.rs  bans.rs  mod.rs  preferences.rs  userdata.rs  users.rs
kindkapibari/kindkapibari_server/src/schema/users/: badges.rs  connections.rs  login_tokens.rs  mod.rs  oauth_authorizations.rs  passwords.rs  preferences.rs  user.rs  userdata.rs
kindkapibari/servers/kindkapibari_api/: Cargo.toml  auth-api.json
kindkapibari/servers/kindkapibari_api/src/: config.rs  main.rs
kindkapibari/servers/kindkapibari_api/src/access/: mod.rs  onetime.rs  recurring.rs  sobers.rs  user.rs
kindkapibari/servers/kindkapibari_api/src/access/auth/: oauth.rs
kindkapibari/servers/kindkapibari_api/src/api/: auth.rs  mod.rs
kindkapibari/servers/kindkapibari_api/src/api/user/: mod.rs  oauth.rs  onetime.rs  recurring.rs  sober.rs  users.rs
kindkapibari/servers/kindkapibari_api/src/api/v1/user/: mod.rs  oauth.rs  sober.rs  users.rs
kindkapibari/servers/kindkapibari_gcs/: Cargo.toml
(+123 files in other folders)
