[workspace]

members = [
    "coconutpak/coconutpak_compiler",
    "coconutpak/coconutpak_island",
    "coconutpak/cnutpk",
    "kindkapibari/kindkapibari_core",
    "kindkapibari/kindkapibari_proc",
    "kindkapibari/kindkapibari_schema",
#    "kindkapibari/api_clients/*",
    "kindkapibari/client/*",
    "kindkapibari/servers/*",
]