[package]
name = "capybafirmations_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["sea-orm", "sea-orm/macros", "sea-orm/chrono"]
client = ["chrono/wasmbind"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
language-tag = "^0.9"
ahash = "^0.7"
uuid = "^0.8"

[dependencies.semver]
version = "^1.0"
features = ["serde"]

[dependencies.sea-orm]
version = "^0.5"
default-features = false
optional = true

[dependencies.chrono]
version = "^0.4"
features = ["serde"]
