[package]
name = "capybafirmations_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["diesel", "diesel/chrono", "diesel/postgres", "diesel/uuid"]
client = ["chrono/wasmbind"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
ahash = "^0.7"

[dependencies.uuid]
version = "0.8"
features = ["serde"]

[dependencies.semver]
version = "^1.0"
features = ["serde"]

[dependencies.url]
version = "^2.2"
features = ["serde"]

[dependencies.quick-xml]
version = "^0.22"
features = ["serialize"]

[dependencies.sqlx]
version = "0.5"
optional = true

[dependencies.diesel]
version = "1.4"
features = ["postgres"]
optional = true

[dependencies.chrono]
version = "^0.4"
features = ["serde"]
