[package]
name = "capybafirmations_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["sea-orm", "sea-orm/macros"]
client = ["chrono/wasmbind"]

[dependencies]
serde_json = "^1.0"
ahash = "^0.7"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]

[dependencies.semver]
version = "^1.0"
features = ["serde"]

[dependencies.url]
version = "^2.2"
features = ["serde"]

[dependencies.quick-xml]
version = "^0.22"
features = ["serialize"]

[dependencies.sea-orm]
version = "0.6"
features = ["macros"]
optional = true

[dependencies.chrono]
version = "^0.4"
features = ["serde"]
