[package]
name = "capybafirmations_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tokio = "1.15"
tower = "0.4"
tracing-subscriber = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sled = "0.34"

[dependencies.capybafirmations_commons]
path = "../../capybafirmations_commons"
features = ["server"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres"]
