[package]
name = "affirmpak_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
thiserror = "1.0"
serde_json = "1.0"

[dependencies.url]
version = "2.2"
features = ["serde"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bson]
version = "2.1"

[dependencies.html_parser]
version = "0.6"

[dependencies.staticvec]
version = "0.11"
features = ["serde"]

[dependencies.capybafirmations_commons]
path = "../../capybafirmations_commons"
default-features = false