[package]
name = "coconutpak_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
itertools = "0.10"
escaper = "0.1"
reqwest = "0.11"
dirs = "4.0"
language-tags = "0.3.2"
walkdir = "2.3.2"
ammonia = "3.2"
pulldown-cmark = "0.9"
html-minifier = "3.0"
xml-rs = "0.8"

[dependencies.toml]
version = "0.5"

[dependencies.url]
version = "2.2"
features = ["serde"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bson]
version = "2.1"

[dependencies.html_parser]
version = "0.6"

[dependencies.kindkapibari_core]
path = "../../kindkapibari/kindkapibari_core"
default-features = false
