[package]
name = "coconutpak_island"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
sled = "0.34"
bytes = "1.1"
handlebars = "4.2"
color-eyre = "0.6"
uuid = "1.0.0"
flume = "0.10"
ahash = "0.7"
dashmap = "5.1"
tar = "0.4"
flate2 = "1.0"
bincode = "1.3"
argon2 = "0.4"
once_cell = "1.10"
wasmtime = "0.36.0"
base64 = "0.13"
sha2 = "0.10"
pot = "1.0"
meilisearch-sdk = "0.17.0"
xml-rs = "0.8"
tracing = "0.1"
staticvec = "0.11.5"
chacha20poly1305 = "0.10.0-pre"

[dependencies.tokio]
version = "1.18"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.snap]
version = "1.0"

[dependencies.lz4_flex]
version = "0.9"

[dependencies.poem]
version = "1.3"
features = ["csrf", "session", "static-files", "multipart", "cookie"]

[dependencies.poem-openapi]
version = "1.3"
features = ["url", "bson", "chrono", "email", "static-files", "redoc"]

[dependencies.sea-orm]
version = "0.8.0"
features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp", "cluster", "connection-manager", "tokio-native-tls-comp"]

[dependencies.atomic_enum]
git = "https://github.com/l1npengtul/atomic_enum"

[dependencies.bson]
version = "2.1"
features = ["chrono-0_4", "serde_with", "uuid-0_8"]

[dependencies.rand]
version = "0.8"
features = ["getrandom"]

[dependencies.tabox]
git = "https://github.com/l1npengtul/tabox.git"

[dependencies.coconutpak_compiler]
path = "../coconutpak_compiler"

[dependencies.kindkapibari_core]
path = "../../kindkapibari/kindkapibari_core"
features = ["server"]

[dependencies.oauth2]
version = "4.2.0"
features = ["reqwest"]

[dependencies.moka]
version = "0.8.2"
features = ["future"]

[dependencies.thiserror]
version = "1.0.31"

[build]
rustflags = ["-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]
