[package]
name = "coconutpak_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
logger = "0.4"
toml = "0.5"
sled = "0.34"
oauth2 = "4.1"
handlebars = "4.2"
color-eyre = "0.6"
uuid = "0.8"
flume = "0.10"

[dependencies.tokio]
version = "1.17"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.snap]
version = "1.0"

[dependencies.lz4_flex]
version = "0.9"

[dependencies.poem]
version = "1.3"
features = ["csrf", "session", "static-files"]

[dependencies.poem-openapi]
version = "1.3"
features = ["url", "bson", "chrono", "email", "static-files", "rapidoc"]

[dependencies.sea-orm]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"]