[package]
name = "kindkapibari_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
client = ["chrono/wasmbind", "wasm-bindgen"]
server = ["pot", "sea-orm", "sea-orm/macros", "sea-orm/chrono", "sea-orm/runtime-tokio-rustls", "sea-orm/with-json", "sea-orm/with-uuid", "sea-orm/sqlx-postgres", "redis", "redis/cluster", "redis/tokio-comp", "redis/tls", "rand", "flume", "tokio/time", "tokio/rt", "futures-core", "crossbeam", "axum-core"]

[dependencies]
serde_json = "^1.0"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["serde"]

[dependencies.semver]
version = "^1.0"
features = ["serde"]

[dependencies.url]
version = "^2.2"
features = ["serde"]

[dependencies.tera]
version = "1.15"

[dependencies.staticvec]
version = "0.11"
features = ["serde"]

[dependencies.language-tags]
version = "0.3"
features = ["serde"]

[dependencies.chrono]
version = "^0.4"
features = ["serde", "unstable-locales"]

[dependencies.redis]
version = "0.21"
optional = true

[dependencies.pot]
version = "1.0"
optional = true

[dependencies.sea-orm]
version = "0.7"
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.rand]
version = "0.8"
features = ["getrandom"]
optional = true

[dependencies.rand_chacha]
version = "0.3"
optional = true

[dependencies.flume]
version = "0.10"
optional = true

[dependencies.axum-core]
version = "0.2"
optional = true

[dependencies.tokio]
version = "1.17"
optional = true

[dependencies.futures-core]
version = "0.3"
optional = true

[dependencies.crossbeam]
version = "0.8"
optional = true
