[package]
name = "kindkapibari_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
client = ["chrono/wasmbind", "wasm-bindgen"]
# I apologize to anyone reading this
server = ["postcard", "sea-orm",
    "redis", "flume", "tokio",
    "futures-core", "crossbeam", "base64", "chacha20poly1305", "argon2", "blake3", "eyre", "once_cell", "moka", "paste", "tokio-native-tls", "axum-core", "axum", "async-trait", "serde_urlencoded", "http", "rand_chacha", "http-body", "utoipa"]

[dependencies]
serde_json = "^1.0"
thiserror = "1.0"
convert_case = "0.5"
license = "2.0"
bytes = "1.1"
jsonwebtoken = "8.1"

[dependencies.kindkapibari_proc]
path = "../kindkapibari_proc"

[dependencies.rand]
version = "0.8.5"
features = ["small_rng", "getrandom"]

[dependencies.rdrand]
version = "0.8.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.0"
features = ["serde"]

[dependencies.semver]
version = "^1.0"
features = ["serde"]

[dependencies.url]
version = "^2.2"
features = ["serde"]

[dependencies.tera]
version = "1.15"

[dependencies.staticvec]
version = "0.11"
features = ["serde"]

[dependencies.language-tags]
version = "0.3"
features = ["serde"]

[dependencies.chrono]
version = "^0.4"
features = ["serde", "unstable-locales"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp", "tls", "cluster"]
optional = true

[dependencies.postcard]
version = "1.0"
features = ["use-std"]
optional = true

[dependencies.sea-orm]
version = "0.8"
features = ["with-uuid", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "macros"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.rand_chacha]
version = "0.3"
optional = true

[dependencies.flume]
version = "0.10"
optional = true

[dependencies.axum-core]
version = "0.2"
optional = true

[dependencies.axum]
version = "0.5"
optional = true

[dependencies.http]
version = "0.2"
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.serde_urlencoded]
version = "0.7"
optional = true

[dependencies.tokio]
version = "1.19"
features = ["rt", "time"]
optional = true

[dependencies.futures-core]
version = "0.3"
optional = true

[dependencies.crossbeam]
version = "0.8"
optional = true

[dependencies.base64]
version = "0.20.0-alpha.1"
optional = true

[dependencies.chacha20poly1305]
version = "0.10.0-pre"
features = ["std"]
optional = true

[dependencies.argon2]
version = "0.4"
features = ["std"]
optional = true

[dependencies.blake3]
version = "1.3"
optional = true

[dependencies.eyre]
version = "0.6"
optional = true

[dependencies.once_cell]
version = "1.12"
optional = true

[dependencies.tokio-native-tls]
version = "0.3"
optional = true

[dependencies.moka]
version = "0.8"
features = ["future"]
optional = true

[dependencies.paste]
version = "1.0"
optional = true

[dependencies.http-body]
version = "0.4"
optional = true

[dependencies.utoipa]
version = "1.1.0"
features = ["chrono", "chrono_with_format", "decimal", "uuid"]
optional = true
