[package]
name = "kandkapybari_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
serde_json = "1.0"
sled = "0.34"
toml = "0.5"
once_cell = "1.9"
language-tags = "0.3"
oauth2 = "4.1"
uuid = "0.8"
chrono = "0.4"

[dependencies.tokio]
version = "1.17"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.poem]
version = "1.3"
features = ["compression", "cookie", "csrf", "prometheus", "redis-session", "rustls", "session", "sse", "static-files", "tower-compat", "websocket", "eyre06", "i18n", "acme", "tokio-metrics"]

[dependencies.poem-openapi]
version = "1.3"
features = ["chrono", "rapidoc", "email", "hostname", "uuid", "url", "bson", "static-files"]

[dependencies.kindkapibari_core]
path = "../kindkapibari_core"
features = ["server"]

[dependencies.sea-orm]
version = "0.7"
features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"]
