[package]
name = "kandkapybari_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
serde_json = "1.0"
sled = "0.34"
toml = "0.5"
once_cell = "1.10"
language-tags = "0.3"
uuid = "1.0.0"
chrono = "0.4"
oauth2 = "4.2"
color-eyre = "0.6"
chacha20poly1305 = "0.10.0-pre"
argon2 = "0.4"
base64 = "0.20.0-alpha.1"
tracing = "0.1.34"
pot = "1.0"
paste = "1.0.7"

[dependencies.tokio]
version = "1.18"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.poem]
version = "1.3"
features = ["compression", "cookie", "csrf", "prometheus", "redis-session", "rustls", "session", "sse", "static-files", "tower-compat", "websocket", "eyre06", "i18n", "acme", "tokio-metrics"]

[dependencies.poem-openapi]
version = "2.0.0-alpha.1"
features = ["chrono", "rapidoc", "email", "hostname", "uuid", "url", "bson", "static-files"]

[dependencies.kindkapibari_core]
path = "../kindkapibari_core"
features = ["server"]

[dependencies.sea-orm]
version = "0.8"
features = ["with-uuid", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "macros"]

[dependencies.oxide-auth-poem]
git = "https://github.com/l1npengtul/oxide-auth"

[dependencies.moka]
version = "0.8"
features = ["future"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp", "tokio-native-tls-comp", "cluster", "connection-manager"]

[dependencies.reqwest]
version = "0.11.10"
features = ["json", "rustls"]

[build]
rustflags = ["-Ctarget-feature=+aes,+sse2,+sse4.1,+ssse3"]
