[package]
name = "kindkapibari_game_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
naia-shared = "0.10"
paste = "1.0"
bevy_rapier3d = "0.15"

[dependencies.bevy]
version = "0.7"
features = ["wayland", "jpeg"]
