[package]
name = "kandkapybari_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
serde_json = "1.0"
toml = "0.5"
once_cell = "1.10"
language-tags = "0.3"
uuid = "1.0.0"
chrono = "0.4"
oauth2 = "4.2"
color-eyre = "0.6"
chacha20poly1305 = "0.10.0-pre"
argon2 = "0.4"
base64 = "0.20.0-alpha.1"
tracing = "0.1.34"
pot = "1.0"
paste = "1.0.7"
async-trait = "0.1"
blake3 = "1.3"
axum-tracing-opentelemetry = "0.2.1"

[dependencies.tokio]
version = "1.19"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.axum]
version = "0.5.9"
features = ["http2", "serde_json", "serde_urlencoded", "ws", "multipart", "headers"]

[dependencies.axum-extra]
version = "0.3.4"

[dependencies.utoipa]
version = "1.1.0"
features = ["chrono", "chrono_with_format", "decimal", "uuid"]

[dependencies.kindkapibari_core]
path = "../../kindkapibari_core"
features = ["server"]

[dependencies.kindkapibari_schema]
path = "../../kindkapibari_schema"

[dependencies.sea-orm]
version = "0.8"
features = ["with-uuid", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "macros"]

[dependencies.oxide-auth-async]
version = "0.1.0"

[dependencies.oxide-auth-axum]
version = "0.2.0"

[dependencies.oxide-auth]
version = "0.5"

[dependencies.moka]
version = "0.8"
features = ["future"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp", "tokio-native-tls-comp", "cluster", "connection-manager"]

[dependencies.reqwest]
version = "0.11.10"
features = ["json", "rustls"]
