[package]
name = "kindkapibari_gcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
serde_json = "1.0"
toml = "0.5"
once_cell = "1.10"
tracing = "0.1.34"
pot = "1.0"
blake3 = "1.3"
axum-tracing-opentelemetry = "0.2.1"
argon2 = "0.4"
base64 = "0.20.0-alpha.1"

[dependencies.tokio]
version = "1.19"
features = ["full"]

[dependencies.axum]
version = "0.5.9"
features = ["http2", "serde_json", "serde_urlencoded", "ws", "multipart", "headers"]

[dependencies.moka]
version = "0.8.5"
features = ["future"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.axum-extra]
version = "0.3.4"

[dependencies.kindkapibari_core]
path = "../../kindkapibari_core"
features = ["server"]

[dependencies.sea-orm]
version = "0.8"
features = ["with-uuid", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "macros"]

[dependencies.redis]
version = "0.21"
features = ["tokio-comp", "tokio-native-tls-comp", "cluster", "connection-manager"]
